force-app/main/default/objects/ssot__BenefitAction__dlm/ssot__BenefitAction__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Actions such as creating a service entitlement that can be triggered automatically when a loyalty program benefit is assigned to a program member.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Loyalty Program</referenceEntityGroup>
        <referenceEntityName>BenefitAction</referenceEntityName>
        <referenceEntitySubjectArea>Loyalty Program</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>