force-app/main/default/objects/ssot__BenefitAction__dlm/fields/ssot__BenefitActionProcessTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitActionProcessTypeId__c</fullName>
    <label>Benefit Action Process Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitActionProcessTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>