force-app/main/default/objects/ssot__BenefitAction__dlm/fields/ssot__IsBenefitExpirationAllowed__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsBenefitExpirationAllowed__c</fullName>
    <label>Is Benefit Expiration Allowed</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsBenefitExpirationAllowed</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>